--- a/com.sap.lys/webapp/manifest.json
+++ b/com.sap.lys/webapp/manifest.json
@@ -72,7 +72,8 @@
 			"libs": {
 				"sap.ui.layout": {},
 				"sap.ui.core": {},
-				"sap.m": {}
+				"sap.m": {},
+				"sap.uxap": {}
 			}
 		},
 		"contentDensities": {
