--- a/com.sap.lys/xs-app.json
+++ b/com.sap.lys/xs-app.json
@@ -4,34 +4,19 @@
 		"logoutEndpoint": "/do/logout"
 	},
 	"routes": [{
-		"source": "^/IOTAS-ADVANCEDLIST-THING-ODATA/(.*)$",
-		"destination": "IOTAS-ADVANCEDLIST-THING-ODATA",
-		"target": "$1",
-		"csrfProtection": false
-	}, {
-		"source": "^/IOTAS-DETAILS-THING-ODATA/(.*)$",
-		"destination": "IOTAS-DETAILS-THING-ODATA",
-		"target": "$1",
-		"csrfProtection": false
-	}, {
-		"source": "^/IOTAS-COMPOSITE-EVENTS-ODATA/(.*)$",
-		"destination": "IOTAS-COMPOSITE-EVENTS-ODATA",
-		"target": "$1",
-		"csrfProtection": false
-	}, {
 		"source": "^/resources/sap/ui/iot/(.*)$",
 		"destination": "IOTAS_CONTROLS",
 		"target": "/sap/ui/iot/$1",
 		"csrfProtection": false
 	}, {
 		"source": "^/backend/(.*)$",
-		"destination": "IOTAS",
-		"target": "$1",
+		"destination": "iotae",
+		"target": "/appiot-mds/$1",
 		"csrfProtection": false
 	}, {
 		"source": "^/backend-image/(.*)$",
-		"destination": "IOTAS-FILEIMAGE",
-		"target": "$1",
+		"destination": "iotae",
+		"target": "/tm-file/$1",
 		"csrfProtection": false
 	}, {
 		"source": "^/resources/(.*)$",
@@ -39,8 +24,14 @@
 		"target": "$1",
 		"csrfProtection": false
 	}, {
+		"source": "^/iotae/(.*)$",
+		"destination": "iotae",
+		"target": "$1",
+		"csrfProtection": false
+	}, {
 		"source": "^/webapp/(.*)$",
 		"target": "$1",
 		"localDir": "webapp"
-	}]
+	}
+	]
 }
