Add IoT service route
Basic authentication must be added in application code because there's no way to do this in app router.

--- a/com.sap.lys/neo-app.json
+++ b/com.sap.lys/neo-app.json
@@ -48,6 +48,13 @@
       }
     },
     {
+      "path": "/iots",
+      "target": {
+        "type": "destination",
+        "name": "iots"
+      }
+    },
+    {
       "path": "/resources",
       "target": {
         "type": "service",
