--- a/com.sap.lys/package.json
+++ b/com.sap.lys/package.json
@@ -9,6 +9,6 @@
     "@sap/approuter": "2.7.1"
   },
   "scripts": {
-    "start": "node node_modules/@sap/approuter/approuter.js"
+    "start": "node server.js"
   }
 }
