--- a/com.sap.lys/package.json
+++ b/com.sap.lys/package.json
@@ -6,7 +6,8 @@
     "@sap/grunt-sapui5module-bestpractice-build": "^0.0.14"
   },
   "dependencies": {
-    "@sap/approuter": "2.7.1"
+    "@sap/approuter": "2.7.1",
+    "request-promise-native": "^1.0.5"
   },
   "scripts": {
     "start": "node server.js"
