--- a/com.sap.lys/package.json
+++ b/com.sap.lys/package.json
@@ -9,6 +9,9 @@
     "@sap/approuter": "2.7.1",
     "request-promise-native": "^1.0.5"
   },
+  "engines": {
+	"node": "8.9.x"
+  },
   "scripts": {
     "start": "node server.js"
   }
