Make api public and connect preview to it

--- a/com.sap.lys/neo-app.json
+++ b/com.sap.lys/neo-app.json
@@ -55,6 +55,13 @@
       }
     },
     {
+      "path": "/api",
+      "target": {
+        "type": "destination",
+        "name": "lys-api"
+      }
+    },
+    {
       "path": "/resources",
       "target": {
         "type": "service",
