--- a/com.sap.lys/xs-app.json
+++ b/com.sap.lys/xs-app.json
@@ -34,6 +34,10 @@
 		"target": "$1",
 		"csrfProtection": false
 	}, {
+		"source": "^/api/bulb/change(.*)$",
+		"destination": "iotae",
+		"authenticationType": "none"
+	}, {
 		"source": "^/webapp/(.*)$",
 		"target": "$1",
 		"localDir": "webapp"
